make the non-null synthetic values explicit